WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273327
REGRESSION (iOS 17.4): Tapping on a `<datalist>` suggestion in the keyboard does not update the input's value
https://bugs.webkit.org/show_bug.cgi?id=273327
Summary
REGRESSION (iOS 17.4): Tapping on a `<datalist>` suggestion in the keyboard d...
Aditya Keerthi
Reported
2024-04-26 10:24:40 PDT
rdar://124784204
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-04-26 11:12:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27810
EWS
Comment 2
2024-04-26 15:42:51 PDT
Committed
278062@main
(8a1e52b41985): <
https://commits.webkit.org/278062@main
> Reviewed commits have been landed. Closing PR #27810 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug