Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -6024,11 +6024,17 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 #endif
 
 #if ENABLE(DATALIST_ELEMENT)
-    if ([textSuggestion isKindOfClass:[WKDataListTextSuggestion class]]) {
-        _page->setFocusedElementValue(_focusedElementInformation.elementContext, [textSuggestion inputText]);
-        return;
+    if ([_dataListTextSuggestions count] && ![[_formInputSession suggestions] count]) {
+        RetainPtr inputText = [textSuggestion inputText];
+        for (WKBETextSuggestion *dataListTextSuggestion in _dataListTextSuggestions.get()) {
+            if ([inputText isEqualToString:dataListTextSuggestion.inputText]) {
+                _page->setFocusedElementValue(_focusedElementInformation.elementContext, inputText.get());
+                return;
+            }
+        }
     }
 #endif
+
     id <_WKInputDelegate> inputDelegate = [_webView _inputDelegate];
     if ([inputDelegate respondsToSelector:@selector(_webView:insertTextSuggestion:inInputSession:)]) {
         auto uiTextSuggestion = [&]() -> RetainPtr<UITextSuggestion> {
